fixed gap between buttons

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@
   
 }
 
+btn-group>.btn-group:not(:first-child), .btn-group>:not(.btn-check:first-child)+.btn {
+  margin: .8vh !important;
+}
+
 .addChoice {
   width: 65vh !important;
   max-width: 100% !important;
